refactor(streams): replace toList() with collect(Collectors.toList()) in multiple services